[package]
name = "pytest-affected"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pytest_affected"
crate-type = ["cdylib"]

[dependencies]
murmurhash32 = "0.3.0"
pyo3 = { version = "0.19.0", features = ["abi3-py38"] }
