[package]
name = "pytest-affected"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pytest_affected"
crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.14.1"
murmurhash32 = "0.3.0"
pyo3 = { version = "0.19" }
