[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "pytest-affected"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Framework :: Pytest",
]


[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pytest_affected._lib"
